--- a/AnkiGame/app/src/main/res/layout/fragment_main.xml
+++ b/AnkiGame/app/src/main/res/layout/fragment_main.xml
@@ -5,15 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txt_name"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/txt_height" />
-
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/lbl_add"/>
+    <WebView
+        android:id="@+id/web_main"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
